<resources>
    <string name="app_name">RecycleAssistant</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_scan">Scan Barcode</string>
    <string name="action_scan_again">Scan Again</string>
    <string name="action_submit_new_product">Submit Product</string>
    <string name="action_take_picture">Take Picture</string>
    <string name="action_take_picture_again">Take Picture Again</string>
    <string name="action_search_manually">Search Manually</string>
    <string name="title_activity_camera_helper">CameraHelperActivity</string>
    <string name="title_activity_image_recognition">ImageRecognitionActivity</string>
    <string name="title_activity_new_product">NewProductActivity</string>
    <string name="title_activity_any_orientation_capture">ScanBarCode</string>
    <string name="wait_message">Loading...</string>
    <string name="connection_error">Please make sure you are connected to the internet!</string>
    <string name="error">Error: </string>
    <string name="app_error">Application error</string>
    <string name="editor_name">Product Name</string>
    <string name="editor_description">Description</string>
    <string name="image_name">Product Image</string>
    <string name="send_button">Submit</string>
</resources>
